--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.application'
 android {
     compileSdkVersion 16
-    buildToolsVersion "20.0.0"
+    buildToolsVersion '24.0.0'
     defaultConfig {
         applicationId "com.yuntongxun.ecdemo"
         minSdkVersion 11
@@ -23,3 +23,5 @@ android {
 
 }
 
+dependencies {
+}
