增加配置url、修改恒丰icon

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -513,7 +513,7 @@
             android:windowSoftInputMode="adjustPan|stateHidden"
             />
         <activity
-            android:name="com.yunzhanghu.redpacketui.ui.activity.RPRedTransferActivity"
+            android:name="com.yunzhanghu.redpacketui.ui.activity.RPTransferActivity"
             android:screenOrientation="portrait"
             android:theme="@style/horizontal_slide"
             android:windowSoftInputMode="adjustPan|stateHidden"
