--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,6 +13,7 @@ android {
         main {
             jniLibs.srcDirs = ['libs']
             java.srcDirs = ['src/main/java']
+            assets.srcDirs = ['assets']
         }
     }
 }
